# yamyam-lab

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pre-commit-config.yaml  pyproject.toml  pytest.ini  ruff.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  pytest.yaml
apps/: README.md  main.py
apps/components/: plots.py  utils.py
apps/pages/: category_analysis.py  data_overview.py  diner_analysis.py  keyword_driven_analytics.py  reviewer_analysis.py
config/: predict.yaml  train.yaml
config/data/: additional_reviews.yaml  category_mappings.yaml  dataset.yaml  embedding.yaml  google_drive.yaml  menu_name.yaml
config/embedding/: graphsage.yaml  metapath2vec.yaml  node2vec.yaml
config/features/: store.yaml
config/log/: logging.yaml
config/models/: als.yaml  catboost.yaml  gnn.yaml  lightgbm.yaml  svd_bias.yaml  xgboost.yaml
config/models/classic_cf/: item_based.yaml
config/models/graph/: graphsage.yaml  lightgcn.yaml  metapath2vec.yaml  node2vec.yaml
config/models/mf/: als.yaml  svd_bias.yaml
config/models/ranker/: catboost.yaml  lightgbm.yaml  xgboost.yaml
config/preprocess/: preprocess.yaml  region.yaml
data/: README.md
example/: node2vec_vs_als.py
notebook/: 250817_MostPopular_Rerank.ipynb  MF_ALS.ipynb  als_dane.ipynb  calculate_reviewer_info.ipynb  clustering_region_test.ipynb  data_validation_check.ipynb  detect-abusing.ipynb  diner_category_analysis.ipynb  eda.ipynb  eda.py  eda_middle.ipynb  graphSAGE_plus_node_feature.ipynb  llm_rec.ipynb  loading_data.ipynb  make_category_table_data.ipynb  new_data_eda.ipynb  preprocessing.ipynb  review_analysis.ipynb  tagging.ipynb  test_most_popular_rank.ipynb
notebook/EDA/: 250611_review_analysis_by_date.ipynb.ipynb  250611_review_analysis_by_location.ipynb  250611_review_analysis_by_weather.ipynb
notebook/scenario_menu_distance/: scenario_menu_distance.ipynb
prompt/: middle_category_imputation.txt
scripts/: README.md  build_regions.py  create_google_drive_token.py  create_region_diner_mapping.py  download_result.py  generate_candidate.py  train_embedding.sh  train_ranker.sh
scripts/candidate/: download_candidate_result.py  generate_candidate.py
src/: evaluate.py  inference.py  lightgcn.py  make_label.py  predict.py  rerank.py  similarity.py  test_metric.py  train.py  train_als.py  train_embedding.py  train_graph.py  train_item_based_cf.py  train_lightgcn.py  train_most_popular.py  train_most_popular_postprocess.py  train_most_popular_rerank.py  train_mp_postprocess.py  train_ranker.py  train_torch.py
src/candidate/: near.py
src/constant/: candidate.py  node2vec.py  preprocess.py
src/constant/candidate/: near.py
src/constant/embedding/: metapath2vec.py  node2vec.py
src/constant/evaluation/: qualitative.py  recommend.py
src/constant/lib/: h3.py
src/constant/metric/: metric.py
src/constant/preprocess/: preprocess.py
src/constant/save/: file_name.py
src/data/: base.py  config.py  csr.py  dataset.py  graph.py  mf.py  ranker.py
src/data/validator/: __init__.py  schemas.py
src/embedding/: base.py  base_embedding.py  graphsage.py  metapath2vec.py  node2vec.py
src/engine/: loop.py
src/evaluation/: metric.py
src/evaluation/metric_calculator/: __init__.py  als_metric_calculator.py  base_metric_calculator.py  embedding_metric_calculator.py  mostpopular_metric_calculator.py  ranker_metric_calculator.py  similarity_metric_calculator.py  svd_bias_metric_calculator.py
src/evaluation/qualitative/: base_qualitative_evaluation.py  node2vec.py
src/explanation/: example.py  explain.py
src/features/: __init__.py  base.py  diner.py  review.py
src/loss/: custom.py
src/metric_calculator/: als_metric_calculator.py  base_metric_calculator.py  embedding_metric_calculator.py  svd_bias_metric_calculator.py
src/model/: __init__.py  als.py  base.py  boosting.py  gnn.py  svd_bias.py
src/model/classic_cf/: item_based.py  user_based.py
src/model/graph/: base_embedding.py  graphsage.py  lightgcn.py  metapath2vec.py  node2vec.py
src/model/mf/: als.py  svd_bias.py
src/model/rank/: __init__.py  base.py  boosting.py
src/postprocess/: most_popular_rerank.py  postprocess.py
src/preprocess/: diner_transform.py  feature_store.py  filter.py  preprocess.py  test_preprocess.py
src/preprocess/region/: builder.py
src/rank/: __init__.py  base.py  boosting.py
src/store/: base.py  feature.py
src/tools/: config.py  generate_walks.py  google_drive.py  h3.py  logger.py  parse_args.py  plot.py  region_mapper.py  rerank.py  sampling.py  tensor.py  utils.py  zip.py
src/yamyam_lab/: __init__.py  hidden.py  inference.py  preprocessor.py  rerank.py  similarity.py  train.py  train_als.py  train_graph.py  train_most_popular.py  train_most_popular_rerank.py  train_ranker.py  train_torch.py
src/yamyam_lab/candidate/: near.py
src/yamyam_lab/data/: base.py  config.py  csr.py  graph.py  mf.py  mp_rank.py  ranker.py
src/yamyam_lab/engine/: __init__.py  als_trainer.py  base_trainer.py  (+3 more)
test/: test_metric.py  test_pfound.py  test_target.py
tests/: conftest.py
tests/config/: model.py
tests/data/: test_dataset.py
tests/embedding/: test_train_embedding.py
tests/evaluation/: test_metric.py
tests/features/: __init__.py  test_diner_menu_functions.py
tests/model/: test_mostpopular_postprocess.py  test_reranker.py  test_similarity.py  test_train.py  test_train_als.py  test_train_graph.py  test_train_mostpopular.py  test_train_ranker.py  test_train_torch.py
tests/postprocess/: test_train_mostpopular_postprocess.py
tests/preprocess/: test_category_preprocess.py  test_preprocess.py
tests/tools/: utils.py
(+52 files in other folders)
