[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["yamyam-members"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "1.5.2"
torch = "2.5.1"
pandas = "2.2.3"
hydra-core = ">=1.3.2"
torch-geometric = ">=2.6.1"
lightgbm = ">=4.5.0"
xgboost = ">=2.1.2"
ipykernel = ">=6.29.5"
black = ">=24.10.0"
flake8 = ">=7.1.1"
isort = ">=5.13.2"
prettytable = ">=3.12.0"
seaborn = ">=0.13.2"
matplotlib = "3.9.2"
implicit = "0.7.2"
node2vec = ">=0.5.0"
flake8-pyproject = ">=1.2.3"
pytest = "8.3.4"
gensim = ">=4.3.0"
tqdm = "4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
exclude = '''
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | ^.*\b(migrations)\b.*$
'''

[tool.flake8]
max-line-length = 88
ignore = "E203, W503, E501"
exclude =  '''
    .git,
    .gitignore,
    */migrations/*,
    __pycache__,
'''