[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["yamyam-members"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "1.5.2"
torch = "2.5.1"
pandas = ">=2.0.0"
hydra-core = ">=1.3.2"
torch-geometric = ">=2.6.1"
lightgbm = ">=4.5.0"
xgboost = ">=2.1.2"
ipykernel = ">=6.29.5"
prettytable = ">=3.12.0"
seaborn = ">=0.13.2"
matplotlib = "3.9.2"
implicit = "0.7.2"
node2vec = ">=0.5.0"
gensim = ">=4.3.0"
tqdm = "4.67.1"
gdown = ">=4.7.1"
numpy = ">=1.24.0"
plotly = ">=5.18.0"
pyyaml = ">=6.0.1"
catboost = "^1.2.7"
python-dotenv = "^1.0.1"
h3 = "4.1.2"
jupyter = "^1.1.1"
pydantic = "^2.10.6"
pandera = "^0.22.1"
geopy = "^2.4.1"
easydict = "^1.13"
pydrive = "^1.3.1"
google-auth-oauthlib = "^1.2.1"
nvitop = "^1.4.2"
streamlit = "1.44.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.0.*"
black = ">=24.10.0"
flake8 = ">=7.1.1"
isort = ">=5.13.2"
flake8-pyproject = ">=1.2.3"
pytest = "8.3.4"
pytest-dotenv = "^0.5.2"
ruff = "0.9.9"
streamlit = ">=1.28.0"

[tool.ruff]
# Refer https://github.com/astral-sh/ruff?tab=readme-ov-file#configuration
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "notebook"
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
lint.select = ["E4", "E7", "E9", "F", "I"]
lint.ignore = ["E722", "F403", "F405", "E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Like Black, use double quotes for strings.
format.quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
format.indent-style = "space"

# Like Black, respect magic trailing commas.
format.skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
format.line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
